# Payload-SDK

./: .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EULA.txt  LICENSE.txt  Project.code-workspace  README.md
samples/sample_c++/platform/linux/cy_psdk/: CMakeLists.txt  README.md  configure_new_module.py.py
samples/sample_c++/platform/linux/cy_psdk/application/: application.cpp  application.hpp  define.h  dji_demo.h  dji_sdk_app_info.h  dji_sdk_config.h  dji_sdk_config.json  main.cpp  my_dji.h
samples/sample_c++/platform/linux/cy_psdk/config/: ConfigManager.cpp  ConfigManager.h
samples/sample_c++/platform/linux/cy_psdk/hal/: hal_i2c.h  hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  hal_usb_bulk.h
samples/sample_c++/platform/linux/cy_psdk/protocol/: AppConfigDataClass.h  DroneDataClass.h  HeartbeatDataClass.h  KmzDataClass.h  RegisterDataClass.h
samples/sample_c++/platform/linux/cy_psdk/services/DroneControl/: FlyManager.cpp  FlyManager.h
samples/sample_c++/platform/linux/cy_psdk/services/EventManager/: EventManager.cpp  EventManager.h
samples/sample_c++/platform/linux/cy_psdk/services/Heartbeat/: Heartbeat.cpp  Heartbeat.h  HeartbeatService.cpp  HeartbeatService.h
samples/sample_c++/platform/linux/cy_psdk/services/MQTT/: Service.cpp  Service.h  Topics.h
samples/sample_c++/platform/linux/cy_psdk/services/MQTT/Handler/: LogicHandler.cpp  LogicHandler.h  MessageHandler.cpp  MessageHandler.h
samples/sample_c++/platform/linux/cy_psdk/services/PSDK/: PSDKAdapter.cpp  PSDKAdapter.h  PSDKManager.cpp  PSDKManager.h
samples/sample_c++/platform/linux/cy_psdk/services/PSDK/PSDKAdapter/: PSDKAdapter.cpp  PSDKAdapter.h
samples/sample_c++/platform/linux/cy_psdk/services/PSDK/PSDKManager/: PSDKManager.cpp  PSDKManager.h
samples/sample_c++/platform/linux/cy_psdk/services/Telemetry/: TelemetryReporter.cpp  TelemetryReporter.h
samples/sample_c++/platform/linux/cy_psdk/utils/: DjiErrorUtils.h  Logger.h  NetworkUtils.h  XmlUtils.h
samples/sample_c++/platform/linux/cy_psdk/utils/JsonConverter/: BuildAndParse.cpp  BuildAndParse.h  JsonToKmz.cpp  JsonToKmz.h
samples/sample_c++/platform/linux/cy_psdk/workspace/: define.h  dji_demo.h  main.cpp  my_dji.h
samples/sample_c++/platform/linux/manifold2/: CMakeLists.txt
samples/sample_c++/platform/linux/manifold2/application/: application.cpp  application.hpp  define.h  dji_demo.h  dji_sdk_app_info.h  dji_sdk_config.h  dji_sdk_config.json  main.cpp  my_dji.h
samples/sample_c++/platform/linux/manifold2/config/: ConfigManager.cpp  ConfigManager.h
samples/sample_c++/platform/linux/manifold2/hal/: hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  hal_usb_bulk.c  hal_usb_bulk.h
samples/sample_c++/platform/linux/manifold2/protocol/: AppConfigDataClass.h  DroneDataClass.h  HeartbeatDataClass.h  JsonProtocol.h  KmlDataClass.h  KmzDataClass.h  RegisterDataClass.h
samples/sample_c++/platform/linux/manifold2/services/DroneControl/: FlyManager.cpp  FlyManager.h
samples/sample_c++/platform/linux/manifold2/services/DroneControl/PSDKAdapter/: PSDKAdapter.cpp  PSDKAdapter.h
samples/sample_c++/platform/linux/manifold2/services/MQTT/: Service.cpp  Service.h  Topics.h
samples/sample_c++/platform/linux/manifold2/services/Telemetry/: TelemetryReporter.cpp  TelemetryReporter.h
samples/sample_c++/platform/linux/manifold2/services/mqtt/: MQTTService.cpp  MqttMessageHandler.cpp  MqttMessageHandler.h  MqttService.cpp  MqttService.h  MqttTopics.h  Service.cpp  Service.h  Topics.h
samples/sample_c++/platform/linux/manifold2/services/telemetry/: TelemetryReporter.cpp  TelemetryReporter.h
samples/sample_c++/platform/linux/manifold2/utils/: DjiErrorUtils.h  EnvironmentCheck.h  JsonConverter.cpp  JsonConverter.h  Logger.h  XmlUtils.h
samples/sample_c++/platform/linux/manifold2/utils/EnvironmentCheck/: EnvironmentCheck.cpp  EnvironmentCheck.h
samples/sample_c++/platform/linux/manifold2/utils/JsonConverter/: BuildAndParse.cpp  BuildAndParse.h  JsonConverter.cpp  JsonConverter.h  JsonToDataClassConverter.cpp  JsonToDataClassConverter.h  JsonToKmz.cpp  JsonToKmz.h  JsonToKmzConverter.cpp
samples/sample_c++/platform/linux/manifold2/utils/JsonToKmzConverter/: JsonToKmzConverter.cpp  JsonToKmzConverter.h
samples/sample_c++/platform/linux/manifold2/utils/Logger/: DjiLoggerAdapter.cpp  Logger.cpp  Logger.h  dji_logger_adapter.cpp  dji_logger_adapter.h
samples/sample_c++/platform/linux/manifold2/utils/NetworkUtils/: NetworkUtils.cpp  NetworkUtils.h
samples/sample_c++/platform/linux/raspberry_pi/: CMakeLists.txt
samples/sample_c++/platform/linux/raspberry_pi/application/: application.cpp  application.hpp  define.h  dji_demo.h  dji_sdk_app_info.h  dji_sdk_config.h  main.cpp  my_dji.h
samples/sample_c++/platform/linux/raspberry_pi/config/: ConfigManager.cpp  ConfigManager.h
samples/sample_c++/platform/linux/raspberry_pi/hal/: hal_i2c.c  hal_i2c.h  hal_network.c  hal_network.h  hal_uart.c  hal_uart.h  hal_usb_bulk.c  hal_usb_bulk.h
samples/sample_c++/platform/linux/raspberry_pi/protocol/: AppConfigDataClass.h  DroneDataClass.h  HeartbeatDataClass.h  KmzDataClass.h  RegisterDataClass.h
samples/sample_c++/platform/linux/raspberry_pi/services/DroneControl/: CommandQueue.h  FlyManager.cpp  FlyManager.h
samples/sample_c++/platform/linux/raspberry_pi/services/EventManager/: EventManager.cpp  EventManager.h
samples/sample_c++/platform/linux/raspberry_pi/services/Heartbeat/: HeartbeatService.cpp  HeartbeatService.h
samples/sample_c++/platform/linux/raspberry_pi/services/MQTT/: Service.cpp  Service.h  Topics.h
samples/sample_c++/platform/linux/raspberry_pi/services/Telemetry/: TelemetryReporter.cpp  TelemetryReporter.h
samples/sample_c++/platform/linux/raspberry_pi/utils/: DjiErrorUtils.h  EnvironmentCheck.h  Logger.h  NetworkUtils.h  XmlUtils.h
samples/sample_c++/platform/linux/raspberry_pi/utils/JsonConverter/: BuildAndParse.cpp  BuildAndParse.h  JsonToKmz.cpp  JsonToKmz.h
samples/sample_c++/platform/linux/raspberry_pi/utils/NetworkUtils/: NetworkUtils.cpp  NetworkUtils.h
(+508 files in other folders)
